Copado Promotion: promotion/P00013-CDDeployUS0000006HotFix

--- a/AccountOperationsArtifact/main/default/classes/AccountOperationsDXTesting.cls
+++ b/AccountOperationsArtifact/main/default/classes/AccountOperationsDXTesting.cls
@@ -1,4 +1,4 @@
-public class AccountOperations {
+public class AccountOperationsDXTesting {
     public static Account setDefaultDescription(Account a) {
         a.Description = 'Default Desc';
         return a;
